--- a/lang/lang_en_pl.txt
+++ b/lang/lang_en_pl.txt
@@ -419,8 +419,8 @@
 "Wymiana ok!"
 
 #MSG_CORRECTLY c=20
-"Changed correctly?"
-"Wymiana ok?"
+"Changed correctly"
+"Wymiana ok"
 
 #MSG_SELFTEST_CHECK_BED c=20
 "Checking bed"
